Fix spacing around OS specific instructions
The Operating System switcher was moved to above the instructions
in PR #498. There was now too much spacing below the instructions for no
reason.

Remove the extra spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -260,10 +260,6 @@ i.icon-small-browser {
   background-image: url('/images/icon-small-browser.png');
 }
 
-.os-specific {
-  margin-bottom: 4em;
-}
-
 .os-specific .picker {
   display: block;
   text-align: right;
